--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -324,16 +324,28 @@ sudo make install
 <p align="justify"><b>Свой формат времени работы:</b></p>
 <table>
   <tr>
-    <td><code>$ds</code></td>
+    <td><code>$dd</code></td>
     <td><p align="justify">Дни аптайма.</p></td>
   </tr>
   <tr>
-    <td><code>$hs</code></td>
+    <td><code>$d</code></td>
+    <td><p align="justify">Дни аптайма без нуля.</p></td>
+  </tr>
+  <tr>
+    <td><code>$hh</code></td>
     <td><p align="justify">Часы аптайма.</p></td>
   </tr>
   <tr>
-    <td><code>$ms</code></td>
+    <td><code>$h</code></td>
+    <td><p align="justify">Часы аптайма без нуля.</p></td>
+  </tr>
+  <tr>
+    <td><code>$mm</code></td>
     <td><p align="justify">Минуты аптайма.</p></td>
+  </tr>
+  <tr>
+    <td><code>$m</code></td>
+    <td><p align="justify">Минуты аптайма без 0.</p></td>
   </tr>
 </table>
 
@@ -375,4 +387,10 @@ sudo make install
 <p align="justify">Виджет (кликабельно):<br>
 <a href="/resources/screenshots/pytextmonitor_widget.png"><img src="/resources/preview/pytextmonitor_widget_prev.jpg"></a><br>
 Окно настроек:<br>
-<a href="/resources/screenshots/pytextmonitor_config.png"><img src="/resources/preview/pytextmonitor_config_prev.jpg"></a></p>
+<a href="/resources/screenshots/pytextmonitor_config_01.png"><img src="/resources/preview/pytextmonitor_config_01_prev.jpg"></a><br>
+<a href="/resources/screenshots/pytextmonitor_config_02.png"><img src="/resources/preview/pytextmonitor_config_02_prev.jpg"></a><br>
+<a href="/resources/screenshots/pytextmonitor_config_03.png"><img src="/resources/preview/pytextmonitor_config_03_prev.jpg"></a><br>
+<a href="/resources/screenshots/pytextmonitor_config_04.png"><img src="/resources/preview/pytextmonitor_config_04_prev.jpg"></a><br>
+<a href="/resources/screenshots/pytextmonitor_config_05.png"><img src="/resources/preview/pytextmonitor_config_05_prev.jpg"></a><br>
+Тултипы:<br>
+<a href="/resources/screenshots/pytextmonitor_tooltips.png"><img src="/resources/preview/pytextmonitor_tooltips_prev.jpg"></a></p>
