added link to changelog for ptm

--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -28,6 +28,9 @@ links:
 <ul>
   <li>{{ page.license }}</li>
 </ul>
+
+<h3><a name="changelog" class="anchor" href="#changelog"><span class="octicon octicon-link"></span></a>Список изменений</h3>
+<p align="justify"><a href="https://github.com/arcan1s/pytextmonitor/blob/master/CHANGELOG-RU">CHANGELOG-RU</a></p>
 <!-- end of info block -->
 
 <!-- install block -->
