--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -66,7 +66,8 @@ sudo make install
   <li>cmake <i>(make)</i></li>
   <li>kdebase-runtime <i>(make)</i></li>
   <li>lm_sensors <i>(опционально, для определения температурного устройства)</i></li>
-  <li>sysstat <i>(опционально, для уведомлений)</i></li>
+  <li>net-tools <i>(опционально, для всплывающих подсказок)</i></li>
+  <li>sysstat <i>(опционально, для всплывающих подсказок)</i></li>
   <li>hddtemp <i>(опционально, для контроля за температурой HDD)</i></li>
   <li>один из поддерживаемых музыкальных плееров - <a href="http://amarok.kde.org/">amarok</a>, <a href="http://www.musicpd.org/">mtd</a> или <a href="http://qmmp.ylsoftware.com/">qmmp</a> <i>(опционально, для контроля за музыкальным плеером)</i>
   <li>проприетарный видеодрайвер <i>(опционально, для контроля за GPU)</i></li></li>
@@ -136,7 +137,7 @@ sudo make install
     <td><p align="justify">Cпециальный формат времени.</p></td>
   </tr>
   <tr>
-    <th rowspan="2">Аптайм</th>
+    <th rowspan="2">Время работы</th>
     <td><code>$uptime</code></td>
     <td><p align="justify">Системный аптайм, <code>---d--h--m</code>.</p></td>
   </tr>
@@ -151,7 +152,7 @@ sudo make install
   </tr>
   <tr>
     <td><code>$cpuN</code></td>
-    <td><p align="justify">Загрузка CPU для ядра N, %, <code>-----</code>. N должно быть в промежутке от 0 до 7.</p></td>
+    <td><p align="justify">Загрузка CPU для ядра N, %, <code>-----</code>. N должно быть в промежутке от 0 до 9.</p></td>
   </tr>
   <tr>
     <th rowspan="2">Частота CPU</th>
@@ -160,7 +161,7 @@ sudo make install
   </tr>
   <tr>
     <td><code>$cpuclN</code></td>
-    <td><p align="justify">Частота CPU для ядра N, МГц, <code>----</code>. N должно быть в промежутке от 0 до 7.</p></td>
+    <td><p align="justify">Частота CPU для ядра N, МГц, <code>----</code>. N должно быть в промежутке от 0 до 9.</p></td>
   </tr>
   <tr>
     <th rowspan="1">Температура</th>
@@ -178,22 +179,30 @@ sudo make install
     <td><p align="justify">Температура GPU, &deg;C, <code>----</code>. <code>aticonfig</code> или <code>nvidia-smi</code> должны быть установлены.</p></td>
   </tr>
   <tr>
-    <th rowspan="2">Память</th>
+    <th rowspan="3">Память</th>
     <td><code>$mem</code></td>
-    <td><p align="justify">Использование памяти, %, <code>-----</code>.</p></td>
+    <td><p align="justify">Использование RAM, %, <code>-----</code>.</p></td>
   </tr>
   <tr>
     <td><code>$memmb</code></td>
-    <td><p align="justify">Использование памяти, MB, <code>-----</code>.</p></td>
+    <td><p align="justify">Использование RAM, MB, <code>-----</code>.</p></td>
   </tr>
   <tr>
-    <th rowspan="2">Swap</th>
+    <td><code>$memgb</code></td>
+    <td><p align="justify">Использование RAM, GB, <code>----</code>.</p></td>
+  </tr>
+  <tr>
+    <th rowspan="3">Swap</th>
     <td><code>$swap</code></td>
     <td><p align="justify">Использование swap, %, <code>-----</code>.</p></td>
   </tr>
   <tr>
     <td><code>$swapmb</code></td>
     <td><p align="justify">Использование swap, MB, <code>-----</code>.</p></td>
+  </tr>
+  <tr>
+    <td><code>$swapgb</code></td>
+    <td><p align="justify">Использование swap, GB, <code>----</code>.</p></td>
   </tr>
   <tr>
     <th rowspan="1">HDD</th>
