added link to kde-apps

--- a/projects/index.html
+++ b/projects/index.html
@@ -91,6 +91,7 @@ groups:
             links:
                 - <a href="/projects/netctl-gui">Homepage</a>
                 - <a href="https://github.com/arcan1s/netctlplasmoid">GitHub repo</a>
+                - Page on <a href="http://kde-apps.org/content/show.php?content=164490">kde-apps.org</a>
                 - <a href="https://aur.archlinux.org/packages/netctl-gui">Archlinux AUR package</a>
 ---
   <body>
