--- a/projects/netctl-gui.html
+++ b/projects/netctl-gui.html
@@ -8,6 +8,7 @@ developers:
     - Evgeniy Alelseev
 license: GPLv3
 links:
+    - Page on <a href="http://kde-apps.org/content/show.php?content=164490">kde-apps.org</a>
     - <a href="https://aur.archlinux.org/packages/netctl-gui">AUR package</a>
 ---
 <!-- info block -->
