--- a/ru/projects/netctl-gui.html
+++ b/ru/projects/netctl-gui.html
@@ -9,6 +9,7 @@ developers:
     - Evgeniy Alelseev
 license: GPLv3
 links:
+    - <a href="http://kde-apps.org/content/show.php?content=164490">Страница на kde-apps.org</a>
     - <a href="https://aur.archlinux.org/packages/netctl-gui">Пакет в AUR</a>
 ---
 <!-- info block -->
