--- a/ru/projects/index.html
+++ b/ru/projects/index.html
@@ -92,6 +92,7 @@ groups:
             links:
                 - <a href="/ru/projects/netctl-gui">Домашняя страница</a>
                 - <a href="https://github.com/arcan1s/netctl-gui">Репозиторий на GitHub</a>
+                - <a href="http://kde-apps.org/content/show.php?content=164490">Страница на kde-apps.org</a>
                 - <a href="https://aur.archlinux.org/packages/netctl-gui">Пакет в AUR</a>
 ---
   <body>
