added link to softpedia

--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -152,7 +152,7 @@ sudo make install
   </tr>
   <tr>
     <td><code>$cpuN</code></td>
-    <td><p align="justify">Load CPU for core N, %, <code>-----</code>. N should be in range 0 to 9.</p></td>
+    <td><p align="justify">Load CPU for core N, %, <code>-----</code>.</p></td>
   </tr>
   <tr>
     <th rowspan="2">CPU clock label</th>
@@ -161,7 +161,7 @@ sudo make install
   </tr>
   <tr>
     <td><code>$cpuclN</code></td>
-    <td><p align="justify">CPU clock for core N, MHz, <code>----</code>. N should be in range 0 to 9.</p></td>
+    <td><p align="justify">CPU clock for core N, MHz, <code>----</code>.</p></td>
   </tr>
   <tr>
     <th rowspan="1">Temperature label</th>
