--- a/ru/projects/netctl-gui.html
+++ b/ru/projects/netctl-gui.html
@@ -9,7 +9,8 @@ developers:
     - Evgeniy Alelseev
 license: GPLv3
 links:
-    - <a href="http://kde-apps.org/content/show.php?content=164490">Страница на kde-apps.org</a>
+    - Страница на <a href="http://linux.softpedia.com/get/System/Networking/Netctl-GUI-103383.shtml">Softpedia</a>
+    - Страница на <a href="http://kde-apps.org/content/show.php?content=164490">kde-apps.org</a>
     - <a href="https://aur.archlinux.org/packages/netctl-gui">Пакет в AUR</a>
 ---
 <!-- info block -->
