--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -152,7 +152,7 @@ sudo make install
   </tr>
   <tr>
     <td><code>$cpuN</code></td>
-    <td><p align="justify">Загрузка CPU для ядра N, %, <code>-----</code>. N должно быть в промежутке от 0 до 9.</p></td>
+    <td><p align="justify">Загрузка CPU для ядра N, %, <code>-----</code>.</p></td>
   </tr>
   <tr>
     <th rowspan="2">Частота CPU</th>
@@ -161,7 +161,7 @@ sudo make install
   </tr>
   <tr>
     <td><code>$cpuclN</code></td>
-    <td><p align="justify">Частота CPU для ядра N, МГц, <code>----</code>. N должно быть в промежутке от 0 до 9.</p></td>
+    <td><p align="justify">Частота CPU для ядра N, МГц, <code>----</code>.</p></td>
   </tr>
   <tr>
     <th rowspan="1">Температура</th>
